--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Haschem Bharat | Pharmaceutical & Chemical Products</title>
-    <meta name="description" content="Haschem Bharat is your trusted partner for high-quality pharmaceutical and chemical products, including API standards, impurity standards, metabolites, and custom synthesis solutions." />
-    <meta name="keywords" content="Haschem Bharat, pharmaceutical, chemical products, API standards, impurity standards, metabolites, custom synthesis, India, Hyderabad" />
+    <meta name="description" content="Haschem Bharat is your trusted partner for high-quality pharmaceutical and chemical products, including API standards, reference standards, metabolites, and custom synthesis solutions." />
+    <meta name="keywords" content="Haschem Bharat, pharmaceutical, chemical products, API standards, API impurities, metabolites, reference standards, custom synthesis, CRO, CDMO, Nitrosamines, Carbohydrates, Research tools" />
     <link rel="canonical" href="https://haschembharat.com/" />
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Haschem Bharat | Pharmaceutical & Chemical Products" />
-    <meta property="og:description" content="Haschem Bharat is your trusted partner for high-quality pharmaceutical and chemical products, including API standards, impurity standards, metabolites, and custom synthesis solutions." />
+    <meta property="og:description" content="Haschem Bharat is your trusted partner for high-quality pharmaceutical and chemical products, including API standards, reference standards, metabolites, and custom synthesis solutions." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://haschembharat.com/" />
     <meta property="og:image" content="https://haschembharat.com/public/vite.svg" />
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Haschem Bharat | Pharmaceutical & Chemical Products" />
-    <meta name="twitter:description" content="Haschem Bharat is your trusted partner for high-quality pharmaceutical and chemical products, including API standards, impurity standards, metabolites, and custom synthesis solutions." />
+    <meta name="twitter:description" content="Haschem Bharat is your trusted partner for high-quality pharmaceutical and chemical products, including API standards, reference standards, metabolites, and custom synthesis solutions." />
     <meta name="twitter:image" content="https://haschembharat.com/public/vite.svg" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
